<resources>
    <string name="app_name">Koshelok</string>
    <string name="click">Click</string>
    <string name="nav_host_fragment">androidx.navigation.fragment.NavHostFragment</string>
    <string name="title_onboarding">Добро пожаловать\nв КошелОК</string>
    <string name="onboardind_sub_title">Тут вы сможете контролировать свои доходы и расходы</string>
    <string name="onboarding_button_text">Войти с помощью Google</string>
    <string name="card_income_title">Доход</string>
    <string name="text_button_add_operation">Добавить операцию</string>
    <string name="card_outcome_title">Расход</string>
    <string name="snackbar_push_exit">Нажмите ещё раз для выхода</string>
    <string name="rubles">%1$s ₽</string>
    <string name="set_sum_fragment_button_text">Готово</string>
    <string name="set_sum_fragment_edit_text_hint">Сумма операции</string>
    <string name="trans_editing_sub_title">Дополнительные</string>
    <string name="trans_editing_title">Основные</string>
    <string name="summary">Сумма</string>
    <string name="type">Тип</string>
    <string name="category">Категория</string>
    <string name="date">Дата операции</string>
    <string name="trans_editing_button">Создать операцию</string>
    <string name="trans_category_button">Далее</string>
    <string name="operation_type_fragment_radio_button_1">Доход</string>
    <string name="operation_type_fragment_radio_button_2">Расход</string>
    <string name="set_sum_fragment_toolbar">Введите сумму</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="january">января</string>
    <string name="february">февраля</string>
    <string name="march">марта</string>
    <string name="april">апреля</string>
    <string name="may">мая</string>
    <string name="june">июня</string>
    <string name="july">июля</string>
    <string name="august">августа</string>
    <string name="september">сентября</string>
    <string name="november">ноября</string>
    <string name="october">октября</string>
    <string name="december">декабря</string>
    <string name="income">Пополнение</string>
    <string name="outcome">Траты</string>
    <string name="time">Время операции</string>
    <string name="trans_create_button">Создать категорию</string>

    <string name="set_name_wallet">Придумайте название</string>
    <string name="set_wallet_name_field">Название кошелька</string>
    <string name="name_wallet">Название</string>
    <string name="currency">Валюта</string>
    <string name="limit">Лимит</string>
    <string name="create_wallet_button">Готово</string>
    <string name="save_button">Сохранить</string>
    <string name="limit_not_stated">Лимит не установлен</string>
    <string name="balance">Общий баланс</string>
    <string name="no_wallets">У вас пока нет кошельков\nСоздайте свой первый кошелек</string>
    <string name="button_create_wallet">Создать кошелек</string>
    <string name="wallet_title">Кошелек</string>
    <string name="new_wallet_title">Новый кошелек</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="create_transaction">Создать категорию</string>
    <string name="category_name_hint">Придумайте название</string>
</resources>